Added Efcore and context
Added EfCore, added Context, configured DI and seed of context in startup.
Removed Dev Appsettings from source and api sln file

--- a/Films/Films.Api/Films.Api.csproj
+++ b/Films/Films.Api/Films.Api.csproj
@@ -17,5 +17,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Films.Core\Films.Core.csproj" />
+    <ProjectReference Include="..\Films.Data\Films.Data.csproj" />
   </ItemGroup>
 </Project>
