--- a/Films/Films.Api/appsettings.Development.json
+++ b/Films/Films.Api/appsettings.Development.json
@@ -1,9 +1,12 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "connectionStrings": {
+    "MoviesDBConnection": "Data Source=/Users/Joe/SqliteDBs/FilmDb.sqlite"
   }
 }
