--- a/Films/Films.Api/appsettings.json
+++ b/Films/Films.Api/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "connectionStrings": {
+    "MoviesDBConnection": "PATH_TO_DB"
+  }
 }
